app/create-deployment-hello-world-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-deployment3
spec:
  selector:
    matchLabels:
      name: my-app3
  template:
    metadata:
      labels:
        name: my-app3
    spec:
      containers:
        - name: hello-world-v2
          image: hitlur8/hello-world:docker-kubernetes-fast-with-mariadb
---
apiVersion: v1
kind: Service
metadata:
  name: my-service3
spec:
  type: LoadBalancer
  selector:
    name: my-app3
  ports:
    - port: 8080
      targetPort: 8080
