app/pod-with-volume-service-and-secret.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-deployment2
spec:
  selector:
    matchLabels:
      name: my-app2
  template:
    metadata:
      labels:
        name: my-app2
    spec:
      containers:
        - name: service-mariadb
          image: mariadb:latest
          args:
            - --init-file
            - /data/schema.sql
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/mysql
            - name: root
              mountPath: /data
            - name: structure-data
              subPath: schema.sql
              mountPath: /data/schema.sql
      volumes:
        - name: db-data
          hostPath:
            path: /data/volume-example
        - name: root
          hostPath:
            path: /
        - name: structure-data
          configMap: 
            name: structure-sql
---
apiVersion: v1
kind: Service
metadata:
  name: my-service2
spec:
  type: ClusterIP
  selector:
    name: my-app2
  ports:
    - port: 3306
      targetPort: 3306
---
