app/ingress-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-deployment4
spec:
  selector:
    matchLabels:
      name: my-app4
  template:
    metadata:
      labels:
        name: my-app4
    spec:
      containers:
        - name: hello-world
          image: hitlur8/hello-world:base
---
apiVersion: v1
kind: Service
metadata:
  name: my-service4
spec:
  type: NodePort
  selector:
    name: my-app4
  ports:
    - port: 8081
      targetPort: 8081
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: my-website.com
      http:
        paths:
        - path: /v1(/|$)(.*)
          backend:
            serviceName: my-service4
            servicePort: 8081
        - path: /v2(/|$)(.*)
          backend:
            serviceName: my-service3
            servicePort: 8080
